--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title：have a good time :D 
+description: Your internal mediocrity is the moment when you lost the faith of being excellent...
